--- a/src/main/resources/test_local.properties
+++ b/src/main/resources/test_local.properties
@@ -18,8 +18,14 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 #######################################################
 # Configuration for directories
 #######################################################
-uko.ppk.temp_dir=temp
-uko.ppk.remote_base_dir=UKO/ASUPPK/SOTIALUKO
+uko.ppk.tempDir=temp
+uko.ppk.remoteBaseDir=UKO/ASUPPK/SOTIALUKO
+
+#######################################################
+# Configuration for filenames
+#######################################################
+uko.ppk.sotialUkoFilePrefix=SOTIALUKO_
+uko.ppk.sotialUkoFileSuffix=.csv
 
 #######################################################
 # Configuration for schedulers
